# rindow-matlib

./: .gitignore  CMakeLists.txt  Makefile.linux  Makefile.win  README.md  packaging.sh  sample.cpp
.github/workflows/: tests.yml
Templates/: CPack.GenericDescription.txt
cmake/: Packing.cmake
debian/: CMakeLists.txt  CPack.GenericDescription.txt  control  postinst  postinst.in  prerm  prerm.in
include/: CMakeLists.txt
include/rindow/: matlib.h  ndarray.h
old/: sum.cpp
pkgconfig/: CMakeLists.txt  rindowmatlib.pc
scripts/: client_generator.php
src/: CMakeLists.txt  bandpart.c  common.c  common.h  cumsum.c  einsum.cpp  gather.c  gather_nd.c  gather_nd.cpp  gatherb.c  gatherb.cpp  greater.c  greater_eq.c  imax.c  imin.c  masking.c  random_uniform.c  searchsorted.c  sum.c  top_k.cpp  zeros.c
src/seq/: CMakeLists.txt
tests/: AATest.cpp  AddTest.cpp  AstypeTest.cpp  BandpartTest.cpp  CMakeLists.txt  CommonTest.cpp  CosTest.cpp  CumsumTest.cpp  DuplicateTest.cpp  EinsumTest.cpp  EqualTest.cpp  ExpTest.cpp  FillTest.cpp  GatherTest.cpp  GatherbTest.cpp  GatherndTest.cpp  GreaterEqualTest.cpp  GreaterTest.cpp  Im2col1dTest.cpp  Im2col2dTest.cpp  Im2col3dTest.cpp  ImagecopyTest.cpp  ImaxTest.cpp  IminTest.cpp  LessTest.cpp  MaskingTest.cpp  MatrixcopyTest.cpp  NDArrayTest.cpp  ReduceArgmaxTest.cpp  ReduceGatherTest.cpp  ReduceMaxTest.cpp  SliceTest.cpp  SqrtTest.cpp  SumTest.cpp  TransposeTest.cpp  Utils.cpp  Utils.h  ZerosTest.cpp  omptest.c  test_main.cpp
thread/: CMakeLists.txt  ParallelOperation.hpp  ThreadPool.cpp  ThreadPool.hpp  add.cpp  bandpart.cpp  common.cpp  common.hpp  cos.cpp  cumsum.cpp  duplicate.cpp  einsum.cpp  equal.cpp  exp.cpp  fill.cpp  gather.cpp  gatherb.cpp  gathernd.cpp  im2col1d.cpp  im2col2d.cpp  im2col3d.cpp  imax.cpp  imin.cpp  isnan.cpp  masking.cpp  matrixcopy.cpp  maximum.cpp  minimum.cpp  onehot.cpp  pow.cpp  random_normal.cpp  reduce_gather.cpp  slice.cpp  softmax.cpp  sum.cpp
threadtest/: AddThreadTest.cpp  CMakeLists.txt  CumsumTest.cpp  GatherbTest.cpp  GatherndTest.cpp  SumThreadTest.cpp
vclib/: CMakeLists.txt  common.c  rindow_matlib_astype.c  rindow_matlib_common_get_address.c  rindow_matlib_common_get_nprocs.c  rindow_matlib_common_get_num_threads.c  rindow_matlib_common_get_parallel.c  rindow_matlib_common_get_version.c  rindow_matlib_d_add.c  rindow_matlib_d_bandpart.c  rindow_matlib_d_cos.c  rindow_matlib_d_cumsum.c  rindow_matlib_d_cumsumb.c  rindow_matlib_d_duplicate.c  rindow_matlib_d_einsum.c  rindow_matlib_d_equal.c  rindow_matlib_d_exp.c  rindow_matlib_d_gather.c  rindow_matlib_d_gatherb.c  rindow_matlib_d_greater.c  rindow_matlib_d_greater_equal.c  rindow_matlib_d_imagecopy.c  rindow_matlib_d_imax.c  rindow_matlib_d_imin.c  rindow_matlib_d_increment.c  rindow_matlib_d_isnan.c  rindow_matlib_d_less.c  rindow_matlib_d_less_equal.c  rindow_matlib_d_log.c  rindow_matlib_d_masking.c  rindow_matlib_d_matrixcopy.c  rindow_matlib_d_maximum.c  rindow_matlib_d_minimum.c  rindow_matlib_d_multiply.c  rindow_matlib_d_nan2num.c  rindow_matlib_d_not.c  rindow_matlib_d_notequal.c  rindow_matlib_d_onehot.c  rindow_matlib_d_pow.c  rindow_matlib_d_randomnormal.c  (+91 more)
